tests/analyzer/errors/for.ray
struct Foo {}
fn main() {
    for v in 5 {}
    let foo = Foo{}
    for v in foo {}
}
